Updated config to run without 4store

--- a/docker/twine-anansi.conf
+++ b/docker/twine-anansi.conf
@@ -1,4 +1,6 @@
 [twine]
+db=pgsql://postgres:postgres@postgres/twine
+
 ;; Loadable modules for Twine processors
 plugin=s3.so
 plugin=rdf.so
@@ -13,14 +15,7 @@ environment=docker
 registry=pgsql://postgres:postgres@postgres/cluster
 
 ;; Workflow
-workflow=spindle-strip,sparql-get,spindle-correlate,sparql-put
-
-;; SPARQL connection configuration
-sparql=http://fourstore:9000/
-sparql-verbose=yes
-sparql-query=http://fourstore:9000/sparql/
-sparql-update=http://fourstore:9000/update/
-sparql-data=http://fourstore:9000/data/
+workflow=spindle-strip,s3-get,spindle-correlate,s3-put
 
 ;; The URI of the message queue endpoint
 mq=anansi:///
