--- a/docker/twine.conf
+++ b/docker/twine.conf
@@ -1,4 +1,6 @@
 [twine]
+db=pgsql://postgres:postgres@postgres/twine
+
 ;; Loadable modules for Twine processors
 plugin=s3.so
 plugin=rdf.so
@@ -12,20 +14,13 @@ cluster-verbose=no
 environment=docker
 registry=pgsql://postgres:postgres@postgres/cluster
 
-;; SPARQL connection configuration
-sparql=http://fourstore:9000/
-sparql-query=http://fourstore:9000/sparql/
-sparql-update=http://fourstore:9000/update/
-sparql-data=http://fourstore:9000/data/
-sparql-verbose=yes
-
 ;; Message queue
 mq=spindle+pgsql://postgres:postgres@postgres/spindle
 
 ;; Configuration specifically for the cli (twine)
 [twinecli]
 ;; Workflow
-workflow=spindle-strip,sparql-get,spindle-correlate,sparql-put
+workflow=spindle-strip,s3-get,spindle-correlate,s3-put
 
 ;; Configuration specifically for the writer daemon (twine-writerd)
 [writerd]
